--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -11,4 +11,8 @@
       %i.fa.fa-camera
 
   %main.main
-    = render 'posts/post-item'
+    .main__inner
+      .main__inner__title
+        最近の投稿
+    
+      = render 'posts/post-item'
