--- a/app/assets/stylesheets/mixin/_global.scss
+++ b/app/assets/stylesheets/mixin/_global.scss
@@ -1,16 +1,16 @@
 .category1{
-  background:red;
+  background:#ffffff;
 }
 
 .category2{
-  background:yellow;
+  background:#ffd700;
 }
 
 .category3{
-  background:blue;
+  background:#1e90ff;
 }
 
 .category4{
-  background:green;
+  background:#008080;
 }
 
