--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -50,6 +50,10 @@
         color: #ffffff;
         padding: 8px 16px;
       }
+
+      &__sign-up:hover{
+        opacity: 0.9;
+      }
     }
   }
 
@@ -63,12 +67,33 @@
     &__box{
       display: block;
       margin: 0 auto;
-      width: 500px;
-      padding: 10px 20px;
+      width: 400px;
+      padding: 10px 40px 10px 20px;
       border: 1px solid #dcdcdc;
       border-radius: 20px;
       font-size:15px;
     }
+
+    .search-btn{
+      border-style: none;
+      cursor: pointer;
+      outline: none;
+    }
+
+    .search-icon{
+      position: absolute;
+      top:10px;
+      right:15px;
+      font-size: 15px;
+    }
+
+    &__box:focus{
+      outline: 0;
+      border: 1px solid #1D90FF;
+    }
+    
+
+
 
     &__btn{
       display: block;
