--- a/app/assets/stylesheets/modules/_post-item.scss
+++ b/app/assets/stylesheets/modules/_post-item.scss
@@ -3,26 +3,61 @@
   font-size: 18px;
   font-weight: 500;
 
-  &__title{
-    display: inline-block;
+  &__top{
+    width: 100%;
     border-bottom: 1px solid #dcdcdc;
-    width:100%;
-    padding:30px 0;
+    display: block;
+    height:100px;
+
+    &__title{
+      display: inline-block;
+      line-height: 100px;
+      float:left;
+      width: 50%;
+
+      &__search{
+        display: inline;
+        color:#a9a9a9;
+      }
+    }
+
+    &__post-btn{
+      display: block;
+      float:right;
+      font-size: 14px;
+      border-radius: 5px;
+      margin: 25px 0;
+      background: #1e90ff;
+      cursor: pointer;
+
+      .post-btn__text{
+        padding:13px 30px;
+        display: block;
+        color:#ffffff;
+      }
+    }
+
+    &__post-btn:hover{
+      opacity: 0.9;
+    }
+
   }
-  
+
   &__contents{
-    padding:20px 0;
+    clear: both;
     display: block;
     border-bottom: 1px solid #dcdcdc;
 
     &__category{
-      width: 100%;
+      height:20px;
 
       &__box{
         display: inline-block;
-        padding: 3px 20px;
+        padding: 3px 3px;
+        text-align: center;
+        width:100px;
         border-radius: 20px;
-        font-size:13px;
+        font-size:11px;
         color: #FFFFFFFF;
       }
     }
@@ -39,8 +74,7 @@
       color: #696969;
       font-size: 13px;
       display: flex;
-      
-      margin-top:10px;
+      margin:10px 0;
 
 
       &__info{
@@ -54,21 +88,46 @@
 
         &__user{
           display: flex;
-
-          width: 100%;
           height:30px;
           
   
           &__name{
+            font-size:15px;
             display: block;
             padding-right:14px;
             line-height: 30px;
+            width:30%;
           }
 
           .link-btn:hover{
-            color:blue;
+            opacity: 0.7;
           }
-  
+
+          &__menu{
+            width: 70%;
+            display:inline-block;
+            text-align: right;
+            padding-right:60px;
+          }
+
+          .post-menu{
+            font-size: 20px;
+            margin-left:10px;
+            line-height: 30px;
+          }
+
+          .post-menu--gry{
+            font-size: 20px;
+            margin-left:10px;
+            line-height: 30px;
+            color:#c0c0c0;
+          }
+
+          .post-menu--gry-text{
+            color:#c0c0c0;
+            display: inline;
+            
+          }
         }
 
 
@@ -80,8 +139,8 @@
 
         .post-image{
           display: inline-block;
-          height: 140px;
-          width: 140px;
+          height: 120px;
+          width: 120px;
           object-fit: cover;
 
 
