--- a/app/views/posts/_post-item.html.haml
+++ b/app/views/posts/_post-item.html.haml
@@ -1,4 +1,3 @@
-
 - @posts.each do |post|
   .main__inner__contents
     .main__inner__contents__category
@@ -31,9 +30,17 @@
           .main__inner__contents__post__info__user__name
             = link_to user_path(post.user_id), class: 'link-btn' do
               = post.user.name
-          -if post.user_id == current_user.id
-            = link_to '編集する', edit_post_path(post.id)
-            = link_to '削除する', root_path
+          .main__inner__contents__post__info__user__menu
+            - if user_signed_in?
+              -if post.user.id == current_user.id
+                = link_to edit_post_path(post.id) do
+                  = fa_icon "edit", class:'post-menu'
+                  編集
+                = link_to post_path(post.id), method: :delete do
+                  = fa_icon "trash",class: 'post-menu--gry'
+                  %p.post-menu--gry-text 削除
+
+              - else
 
               
       
