--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,9 +3,10 @@
 
 
   %main.main
-  .main__inner
-    .main__inner__title
-      = "#{@user.name}さんの投稿"
-  
-    = render 'posts/post-item'
+    .main__inner
+      .main__inner__top
+        .main__inner__top__title
+          = "#{@user.name}さんの投稿"
+      
+        = render 'posts/post-item'
 
