--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,1 +1,13 @@
-ああああ
+.new-wrapper
+  .new-wrapper__header
+    = link_to root_path, class:'new-wrapper__header__title' do
+      = image_tag 'logo.png', alt: 'タイトルロゴ', class: 'new-wrapper__header__title__logo'
+  .new-wrapper__main
+  = form_for @post do |f|
+    = f.collection_select :post_category_id, PostCategory.all,:id,:name,{selected: :post_category_id == 1},{class: 'select-box'}
+    = f.file_field :image, class:"file",id: "file"
+
+    
+  
+    = f.text_field :text, class:''
+    = f.submit "送信"
