--- a/app/views/posts/_post-item.html.haml
+++ b/app/views/posts/_post-item.html.haml
@@ -32,15 +32,25 @@
               = post.user.name
           .main__inner__contents__post__info__user__menu
             - if user_signed_in?
-              -if post.user.id == current_user.id
+              - if post.user.id == current_user.id
                 = link_to edit_post_path(post.id) do
                   = fa_icon "edit", class:'post-menu'
                   編集
                 = link_to post_path(post.id), method: :delete do
                   = fa_icon "trash",class: 'post-menu--gry'
                   %p.post-menu--gry-text 削除
-
               - else
+                - if current_user.already_liked?(post)
+                  = button_to 'いいねけす',post_like_path(post,id:post.id),method: :delete
+                - else
+                  = button_to 'いいね', post_likes_path(post)
+
+
+              = post.likes.count
+              
+                  
+
+
 
               
       
