--- a/app/assets/stylesheets/modules/_post-item.scss
+++ b/app/assets/stylesheets/modules/_post-item.scss
@@ -126,7 +126,17 @@
           .post-menu--gry-text{
             color:#c0c0c0;
             display: inline;
-            
+            margin-right: 10px;
+          }
+
+          .star-yellow{
+            font-size:25px;
+            color:yellow;
+          }
+          .star-gray{
+            font-size:25px;
+            color:gray;
+            border-color: red;
           }
         }
 
