--- a/app/views/posts/_post-item.html.haml
+++ b/app/views/posts/_post-item.html.haml
@@ -19,7 +19,7 @@
           = post.post_category.name
 
     .main__inner__contents__date
-      = @day
+      = post.created_at.strftime("%Y-%m-%d %H:%M:%S")
         
     .main__inner__contents__post
       
