--- a/app/assets/stylesheets/modules/_post-item.scss
+++ b/app/assets/stylesheets/modules/_post-item.scss
@@ -86,6 +86,9 @@
           height:100px;
           width:760px;
           padding-right:60px;
+          max-height: 300px;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         &__user{
