--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -13,11 +13,11 @@
         = f.collection_select :post_category_id, PostCategory.all,:id,:name,{selected: :post_category_id == 1},{class: 'select-box'}
       .new-wrapper__main__post-image
         %p.new-wrapper__main__input-title 画像（任意）
-        = f.file_field :image, class:"file",id: "file" 
+        = f.file_field :image,class:"file",id: "file" 
 
       .new-wrapper__main__post-text
         %p.new-wrapper__main__input-title コメント（必須）
-        = f.text_area :text, class:'post-text__input'
+        = f.text_area :text,placeholder:'最大５行まで',class:'post-text__input'
 
 
         = f.submit "投稿する", class: 'new-wrapper__main__submit'
