--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,6 @@
  @import "mixin/global";
  @import "modules/header";
  @import "modules/new";
+ @import "modules/show";
+ @import "modules/like";
+ @import "modules/user-menu";
