--- a/app/assets/stylesheets/mixin/_global.scss
+++ b/app/assets/stylesheets/mixin/_global.scss
@@ -1,3 +1,15 @@
+html {
+  height: 100%;
+}
+
+body{
+  height: 100%;
+  margin: 0;
+}
+
+
+// post-categoryの色指定
+
 .category1{
   background:#9fa09e;
 }
@@ -18,3 +30,4 @@
   text-align: center;
   margin: 50px 0; 
 }
+
