--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -8,7 +8,6 @@
     padding: 10px 30px;
     background-color: white;
   }
-  
 
   &__post-image{
     background-color: #f9f9f9;
@@ -33,16 +32,23 @@
   &__post-text{
     margin:  auto 100px;
     height:auto;
-    padding-top:20px;
+    padding:20px 0 40px 0;
+    font-size: 15px;
   }
 
   .show-return-btn{
     display: block;
     text-align: center;
-    background-color: red;
-    margin: 0 auto;
+    border:1px solid  #1e90ff;
     width: 15%;
+    padding:3px 0;
+    border-radius: 3px;
+    margin:40px auto;
   }
+  .show-return-btn:hover{
+    background-color: #eaf4fc;
+  }
+
 
 }
 
