--- a/app/views/posts/_post-item.html.haml
+++ b/app/views/posts/_post-item.html.haml
@@ -22,11 +22,11 @@
         .main__inner__contents__date
           = post.created_at.strftime("%Y-%m-%d %H:%M:%S")
           
-      .main__inner__contents__post
-        
+      .main__inner__contents__post   
         .main__inner__contents__post__info
           .main__inner__contents__post__info__text
-            = simple_format(post.text)
+            = simple_format(post.text.truncate(340) )
+            
           .main__inner__contents__post__info__user
             .main__inner__contents__post__info__user__name
               = link_to user_path(post.user_id), class: 'link-btn' do
@@ -47,7 +47,8 @@
                 
         .main__inner__contents__post__image
           -if post.image.present?
-            = image_tag post.image.url, class: 'post-image'
+            =link_to post_path(post.id) do
+              = image_tag post.image.url, class: 'post-image'
             
 
 
