--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -17,7 +17,7 @@
 
       .new-wrapper__main__post-text
         %p.new-wrapper__main__input-title コメント（必須）
-        = f.text_area :text,placeholder:'最大５行まで',class:'post-text__input'
+        = f.text_area :text, class:'post-text__input'
 
 
         = f.submit "投稿する", class: 'new-wrapper__main__submit'
