--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,5 +9,7 @@
             = @user.name
           さんの投稿
       
-        = render 'posts/post-item'
+      = render 'posts/post-item'
 
+  .pagination
+    = paginate @posts
